[package]
name = "bms"
version = "0.1.1"
edition = "2018"
description = "Be-Music Source parser"
license = "MIT"
repository = "https://github.com/EgoOrb/bms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.6"
lazy_static = "1.4.0"
itertools = "0.10.0" 
read_input = "0.8.4"
radix_fmt = "1"
encoding_rs = "0.8.28"